Use a variable to ensure the same spacing around the E2E icon

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -55,6 +55,7 @@ limitations under the License.
 .mx_EventTile[data-layout=bubble] {
     --EventTile_bubble-margin-inline-start: 49px;
     --EventTile_bubble-margin-inline-end: 60px;
+    --EventTile_bubble_line-inline-spacing: 5px;
 
     position: relative;
     margin-top: var(--gutterSize);
@@ -272,7 +273,7 @@ limitations under the License.
 
         position: relative;
         display: flex;
-        gap: 5px;
+        gap: 5px var(--EventTile_bubble_line-inline-spacing);
         margin: 0 var(--EventBubbleTile_line-margin-inline-end) 0 -9px;
         border-top-left-radius: var(--cornerRadius);
         border-top-right-radius: var(--cornerRadius);
@@ -604,7 +605,7 @@ limitations under the License.
     .mx_EventTile_avatar {
         position: static;
         order: -1;
-        margin-inline-end: 5px; // TODO: Use a spacing variable
+        margin-inline-end: var(--EventTile_bubble_line-inline-spacing); // Same spacing between E2E icon and a hidden event
     }
 
     .mx_EventTile_line,
